# datacon_venv

./: README.md  task.md
examples/layout/: pyproject.toml  setup.py
examples/layout/app/: main.py
examples/layout/app/data/: test_data.csv
examples/layout/app/src/: __init__.py  utils.py
examples/task_conda/: environment.yml
examples/task_poetry/: main.py  pyproject.toml
